Fiz atualizações no projeto

--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ nav > a:hover {
 } 
 
 main {
-    min-width: 300px;
-    max-width: 1000px;
+    min-width: 400px;
+    max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
     padding: 20px;
@@ -119,8 +119,8 @@ main p {
 main a {
     text-decoration: none;
     font-weight: bold;
-    color: var(--cor5);
-    background-color: var(--cor3);
+    color: var(--cor4);
+    background-color: var(--cor6);
     padding: 2px 5px;
 }
 
@@ -133,16 +133,10 @@ main img {
     width: 100%;
 }
 
-main img.capa {
-    max-width: 350px;
+picture {
+    padding: -5px 10px;
     display: block;
     margin: auto;
-}
-
-div {
-    display: inline-block;
-    padding: 10px 10px 0px 0px;
-    margin: 10px 10px 10px 10px;
 }
 
 aside {
@@ -154,6 +148,7 @@ aside {
 
 aside > h3 {
     background-color: var(--cor1);
+    font-family: var(--fonte-titulo);
     color: white;
     padding: 7px;
     margin: -10px -10px 0px -10px;
@@ -188,5 +183,6 @@ footer a:hover {
 
 footer p {
     color: white;
+    text-align: center;
 }
 
