--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ main p {
     line-height: 1.5em;
 }
 
+main strong {
+    color: var(--cor2);
+}
+
 main a {
     text-decoration: none;
     font-weight: bold;
