--- a/style.css
+++ b/style.css
@@ -171,10 +171,13 @@ aside > ul {
     columns: 2;
 }
 
+
+
 footer {
     background-color: var(--cor5);
     color: white;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
     padding: 3px;
 }
