--- a/style.css
+++ b/style.css
@@ -133,14 +133,25 @@ main a:hover {
     color: var(--cor5);
 }
 
-main img {
-    width: 100%;
+div {
+    text-align: center;
 }
 
-picture {
-    padding: -5px 10px;
+#responsivo {
+    max-width: 1000px;
+    width: 50%;
+    height: auto;
+}
+
+#responsivo img {
     display: block;
-    margin: auto;
+    margin: 0px auto;
+    max-width: 100%;
+    width: 50%;
+    max-height: 500px;
+    min-height: 100%;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 aside {
