--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
 
 body {
     background-color: var(--cor0);
-    overflow-x: hidden;
 }
 
 a.externa::after {
@@ -67,6 +66,7 @@ nav {
 }
 
 nav > a {
+    font-size: 1.1em;
     color: white;
     padding: 10px;
     border-top-left-radius: 5px;
@@ -112,6 +112,7 @@ main h2 {
 main p {
     margin: 15px 0px;
     text-align: justify;
+    text-indent: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     line-height: 1.5em;
