--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ main h2 {
 }
 
 main p {
+    padding-right: 10px;
     margin: 15px 0px;
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
